remove issues comma spacing on newsroom landing

--- a/web/themes/custom/nysenate_theme/src/patterns/components/newsroom-landing/newsroom-landing.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/newsroom-landing/newsroom-landing.scss
@@ -69,7 +69,8 @@
           line-height: 1em!important;
           letter-spacing: 0.05em;
           text-decoration: none;
-          padding-right: 5px;
+          padding-right: 0;
+          color: $orange-text;
           @extend .link-text;
 
           &:hover {
